Renames - AnimationGroup and AnimationSequence
Rename ParGroup to AnimationGroup
Rename SeqGroup to AnimationSequence

From Web Animations minutes, 27 Feb 2014
https://etherpad.mozilla.org/ep/pad/view/ro.WCBLOuse6D5/latest

--- a/test/testcases/test-null-target.html
+++ b/test/testcases/test-null-target.html
@@ -44,7 +44,7 @@ var expected_failures = {
   var pause1 = new Animation(null, {left: "500px"}, timing);
   var pause2 = new Animation(null, null, timing);
   var down = new Animation(document.querySelector("#a"), {top: "450px"}, timing);
-  var combo = new SeqGroup([across, pause1, pause2, down]);
+  var combo = new AnimationSequence([across, pause1, pause2, down]);
   document.timeline.play(combo);
 
   timing_test(function() {
