--- a/test/testcases/disabled-media.html
+++ b/test/testcases/disabled-media.html
@@ -327,7 +327,7 @@ timing_test(function() {
 timing_test(function() {
   var video = getNextVideo();
   at(0.0, function() {
-    dt.play(new ParGroup([createTestMediaReference(video, {playbackRate: 1.5})],
+    dt.play(new AnimationGroup([createTestMediaReference(video, {playbackRate: 1.5})],
         {playbackRate: 2.5}));
   });
   at(1.0, function() {
@@ -377,7 +377,7 @@ timing_test(function() {
 timing_test(function() {
   var video = getNextVideo();
   at(0.0, function() {
-    dt.play(new ParGroup(
+    dt.play(new AnimationGroup(
         [createTestMediaReference(video, {playbackRate: -0.5})],
         {playbackRate: 3.0, direction: "reverse"}));
   });
