Tweak test cases

--- a/test.html
+++ b/test.html
@@ -36,9 +36,9 @@ var testGroups = [
     'skewX(40deg)',
     'skewY(30deg)',
   ], [
-    'scale(1.1, 1.2)',
-    'scaleX(1.2)',
-    'scaleY(1.1)',
+    'scale(1.5, 2)',
+    'scaleX(2)',
+    'scaleY(1.5)',
     'scaleZ(2) translateZ(4px)',
   ], [
     'rotate(60deg)',
@@ -55,6 +55,7 @@ var testGroups = [
   ], [
     'translate(100px)',
     'translate(100px) rotate(20deg)',
+    'translate(100px) rotate(20deg) matrix(0.7, 0.7, -0.7, 0.7, 0, 0)',
     'translate(100px) rotate(20deg) scale(0.5)',
   ]
 ];
