--- a/test/testcases/auto-test-matrix-transforms.html
+++ b/test/testcases/auto-test-matrix-transforms.html
@@ -16,146 +16,74 @@ limitations under the License.
 
 <!DOCTYPE html><meta charset="UTF-8">
 <style>
-.container {
-  -webkit-perspective: 400px;
-  perspective: 400px;
+.anim {
+  background-color: lightsteelblue;
   position: absolute;
-  top: 10px;
-}
-.box {
-  display: inline-block;
   width: 100px;
   height: 100px;
-  margin: 16px;
-  border-style: solid;
-  white-space: pre;
+  top: 0px;
+  left: 0px;
 }
-.test {
-  border-color: green;
+
+#b {
+  top: 100px;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+}
+
+#c {
+  top: 200px;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#d {
+  top: 300px;
+  -webkit-transform: rotate(45deg) translate(100px);
+  transform: rotate(45deg) translate(100px);
+}
+
+#e {
+  top: 400px;
+  -webkit-transform: scale(2) rotate(45deg) translate(100px);
+  transform: scale(2) rotate(45deg) translate(100px);
 }
 .expectation {
-  color: red;
+  fill: red;
 }
 </style>
-
-<div id="spacer"></div>
-<div id="expectationContainer" class="container"></div>
-<div id="testContainer" class="container"></div>
+<div class="anim" id="a"></div>
+<div class="anim" id="b"></div>
+<div class="anim" id="c"></div>
+<div class="anim" id="d"></div>
+<div class="anim" id="e"></div>
+<div style="height: 550px"></div>
 
 <script>
-var expected_failures = {};
+var expected_failures = {
+  '/Auto generated tests at t=((?!(0.4|0.8|1.20+1|1.6|2))[0-9.]+)s/': {
+    msie: true,
+    message: "Getting weird numbers."
+  }
+};
 </script>
 <script src="../bootstrap.js"></script>
 <script>
 "use strict";
-var testGroups = [
-  [
-    'matrix3d(1,0,0,0, 0,1,0,0, 0,0,1,0, 0,0,0,1)',
-    'matrix(0.7, 0.7, -0.7, 0.7, 10, 20)',
-    'matrix3d(0,0,-1,0, 0,1,0,0, 1,0,0,0, 0,0,0,1)',
-  ], [
-    'skew(20deg, 30deg)',
-    'skewX(40deg)',
-    'skewY(30deg)',
-  ], [
-    'scale(1.5, 2)',
-    'scaleX(2)',
-    'scaleY(1.5)',
-    'scaleZ(2) translateZ(4px)',
-  ], [
-    'rotate(60deg)',
-    'rotateX(70deg)',
-    'rotateY(80deg)',
-    'rotateZ(70deg)',
-    'rotate3d(1, 1, 1, 60deg)',
-  ], [
-    'translate(10px, 20px)',
-    'translateX(10px)',
-    'translateY(20px)',
-    'translateZ(30px)',
-    'translate3d(10px, 20px, 40px)',
-  ], [
-    'translate(100px)',
-    'translate(100px) rotate(20deg)',
-    'translate(100px) rotate(20deg) matrix(0.7, 0.7, -0.7, 0.7, 0, 0)',
-    'translate(100px) rotate(20deg) scale(0.5)',
-  ]
-];
+var a = document.querySelector("#a")
+var b = document.querySelector("#b")
+var c = document.querySelector("#c")
+var d = document.querySelector("#d")
+var e = document.querySelector("#e")
 
-var animations = [];
-var style = document.createElement('style');
-var count = 0;
-var showExpectations = inExploreMode();
-var expectationStarters = [];
+var dt = document.timeline;
 
-function addAnimationTest(from, to) {
-  var testElement = document.createElement('div');
-  testElement.classList.add('box', 'test');
-  testContainer.appendChild(testElement);
-  testElement.textContent = from + '\n' + to;
-  animations.push(new Animation(testElement, [
-      {transform: from},
-      {transform: to},
-    ], {
-      duration: 1,
-      direction: 'alternate',
-      iterations: Infinity,
-      easing: 'ease-in-out',
-    }));
+var timing = {duration: 2, fill: 'forwards'};
 
-  if (!showExpectations) {
-    return;
-  }
-  var expectationElement = document.createElement('div');
-  expectationElement.classList.add('box', 'expectation');
-  expectationElement.textContent = from + '\n' + to;
-  var currentCount = count;
-  expectationStarters.push(function() {
-    expectationElement.classList.add('animation' + currentCount);
-  });
-  expectationContainer.appendChild(expectationElement);
-  var keyframes = ' animation' + count + '{' +
-      'from{-webkit-transform:' + from + ';transform:' + from +';}' +
-      'to{-webkit-transform:' + to + ';transform:' + to +';}}';
-  var animation = 'animation' + count + ' 1s alternate infinite ease-in-out';
-  style.textContent += '@-webkit-keyframes' + keyframes + '\n';
-  style.textContent += '@keyframes' + keyframes + '\n';
-  style.textContent += '.animation' + count +'{-webkit-animation:' + animation + ';animation:' + animation + ';}\n';
-  count++;
-}
-
-function addBreak() {
-  testContainer.appendChild(document.createElement('hr'));
-  if (showExpectations) {
-    expectationContainer.appendChild(document.createElement('hr'));
-  }
-}
-
-function addTestGroup(tests) {
-  tests.forEach(function(transform) {
-    addAnimationTest('none', transform);
-  });
-  tests.forEach(function(transform, i) {
-    addAnimationTest(transform, tests[(i + 1) % tests.length]);
-  });
-  addBreak();
-}
-
-testGroups.forEach(addTestGroup);
-
-if (showExpectations) {
-  expectationContainer.appendChild(style);
-  var startExpectations = function() {
-    expectationStarters.forEach(function(f) {f();});
-  };
-  if (navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
-    requestAnimationFrame(startExpectations);
-  } else {
-    startExpectations();
-  }
-}
-// TODO: Make infinite duration groups work.
-animations.forEach(function(animation) {document.timeline.play(animation);});
-
-spacer.style.height = testContainer.clientHeight + 'px';
+dt.play(new Animation(a, {transform: "translate(100px)"}, timing));
+dt.play(new Animation(b, {transform: "translate(100px)"}, timing));
+dt.play(new Animation(c, {transform: "translate(100px)"}, timing));
+dt.play(new Animation(d, {transform: "translate(100px) rotate(45deg)"}, timing));
+dt.play(new Animation(e,
+    {transform: "translate(100px) rotate(20deg) scale(0.5)"}, timing));
 </script>
