Use nicer dimensions for testing

--- a/test/testcases/auto-test-transform-origin.html
+++ b/test/testcases/auto-test-transform-origin.html
@@ -24,9 +24,9 @@ limitations under the License.
   top: 0;
 }
 .box {
-  width: 100px;
-  height: 100px;
-  border: solid;
+  width: 96px;
+  height: 96px;
+  border: solid 2px;
   display: inline-block;
   margin: 50px;
   -webkit-transform-style: preserve-3d;
@@ -61,7 +61,7 @@ var testCases = [
   '10% 50px 100px',
   'right bottom 100px',
   'right calc(120% - 100px)',
-  'right calc(80% - 100px) -200px',
+  'right calc(120% - 100px) -200px',
 ];
 
 function createBox(type) {
