--- a/test/testcases/auto-test-path.html
+++ b/test/testcases/auto-test-path.html
@@ -97,6 +97,10 @@ var expected_failures = {
     firefox: ['26.0', '27.0'],
     message: "Doesn't quite follow path correctly."
   },
+  '/#anim2 at t=9s/' : {
+    firefox: ['28.0', '29.0', '30.0'],
+    message: "Doesn't quite follow path correctly."
+  },
   '/#anim3 at t=(0|7|8|10)s/': {
     firefox: true,
     message: "Doesn't quite follow path correctly."
@@ -130,23 +134,6 @@ var expected_failures = {
   '/#anim4 at t=(0|1|3|9|10|11)s/': {
     msie: true,
     message: "Doesn't quite follow path correctly."
-  },
-
-  // Android Chrome
-  '/#anim3 at t=(7|8)s/' : {
-    android: true,
-    message: "Android uses integer SVG implementation."
-  },
-  '/#anim4 at t=8s/' : {
-    android: true,
-    message: "Android uses integer SVG implementation."
-  },
-
-  // Firefox & Android Chrome
-  '/#anim2 at t=9s/' : {
-    firefox: ['28.0', '29.0', '30.0'],
-    android: true,
-    message: "Firefox is non-visibly different and Android uses an integer SVG implementation."
   },
 };
 </script>
