--- a/test/testcases/test-player-cleanup.html
+++ b/test/testcases/test-player-cleanup.html
@@ -16,12 +16,13 @@ limitations under the License.
 <!DOCTYPE html><meta charset="UTF-8">
 <div id='anim'></div>
 <script>
-var expected_failures = {
-  '/.* t=(3|5)s/': {
-    msie: true,
-    message: "IE returns rgba not rga."
+var expected_failures = [
+  {
+    browser_configurations: [{ msie: true }],
+    tests: ['t=(3|5)s'],
+    message: 'IE returns rgba.',
   }
-};
+];
 </script>
 <script src="../bootstrap.js"></script>
 <script>
