--- a/test/testcases/auto-test-perspective.html
+++ b/test/testcases/auto-test-perspective.html
@@ -48,12 +48,9 @@ limitations under the License.
 <div id="expectationContainer" class="container"></div>
 <div id="testContainer" class="container"></div>
 
-<script>
-var expected_failures = {};
-</script>
 <script src="../bootstrap.js"></script>
 <script>
-"use strict";
+'use strict';
 var perspectiveTestCases = [
   '150px',
   '1000px',
