--- a/test/testcases/test-player-cleanup.html
+++ b/test/testcases/test-player-cleanup.html
@@ -67,7 +67,7 @@ timing_test(function() {
 	})
 
 	at(5, function() {
-		player.source.specified.duration = 4;
+		player.source.timing.duration = 4;
 		assert_equals(document.timeline.getCurrentPlayers().length, 1,
 			"Only restarted animation current");
 		assert_equals(_WebAnimationsTestingUtilities._knownPlayers.length, 2,
